--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -402,7 +402,7 @@ Due to this limitation, we show in the next section a practiced approach which i
 
 
 
-\section{Cross Validation}\label{section:crossValidation}
+\section{Cross Validation (CV)}\label{section:crossValidation}
 
 Classification models are algorithms which build approximating functions to a stochastic process, by means of algorithms. Due to the searching nature of this process, in the generally large space of hyper-parameters, we have that when models are fitted, we end producing different learners. 
  
