--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -599,9 +599,9 @@ Four metrics were cross-validated and compared in this experiment: $Accuracy$, $
 Metric & Best CV $C$ value & Mean CV score & Test score & Full CV time (s)  \\
 \midrule
 $Accuracy$ & 3.162 & 0.685 & 0.695 & 4628.3  \\
-$Precision$ & 0.107 & 0.242 & 0.232 & 4638.2 \\
-$Recall$ & 0.0006 & 0.673 & 0.668 & 4667.5 \\
-$F1$ & 0.0015 & 0.339 & 0.340 & 4612.1 \\
+$Precision$ & 0.107 & 0.637 & 0.612 & 4638.2 \\
+$Recall$ & 0.0006 & 0.038 & 0.035 & 4667.5 \\
+$F1$ & 0.0015 & 0.071 & 0.005 & 4612.1 \\
 \bottomrule
 \end{tabular*}
 \end{table}
@@ -674,7 +674,7 @@ The difference in the two scores is notable and corresponds entirely to the prob
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=1.2\columnwidth]{figures/figure-highROCAUC/figure-highROCAUC}
-\caption{Example of a ROC curve from a Decision Tree classifier used on \cref{target1}. A 8-fold CV procedure is fit and then the best learner's performance is evaluated on $\mathcal{T_s}$ which gives score of $0.76$.}
+\caption{Example of a ROC curve from a Decision Tree classifier used on \cref{target1}. An 8-fold CV procedure is fit and then the best learner's performance is evaluated on $\mathcal{T_s}$ which gives score of $0.76$.}
 \label{fg:highROCAUC}
 \end{center}
 \end{figure}
