--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -299,8 +299,8 @@ Finally, the impurity measure  we used was the is the Gini index for the splitti
 
 Cross validation procedures ran for 1412.8 and 2506.1 seconds respectively. In both of them we excluded any user attributes that informed their home state and current endemic condition, in the time period $T_1$.
 
-The experiment's scores outcomes across their hyperparameter values were graphed in \cref{fig:f1_random_forest_validation_curves_depth_trees,fig:f1_random_forest_validation_curves_num_trees}.
-For both, the cross-validated and training set scores were compared. In this way, for each hyperparameter value, the $1-F1$ score is shown.
+The experiment's scores outcomes across their hyperparameter values were graphed in \cref{fig:random_forest_validation_curves_depth_trees,fig:random_forest_validation_curves_num_trees}.
+For both, the cross-validated and training set scores were compared. In this way, for each hyperparameter value, the $1-ROC AUC$ score is shown.
 In this way, having a lower score in the graphic means a better model was reached.
 
 
@@ -308,8 +308,8 @@ In this way, having a lower score in the graphic means a better model was reache
 	\begin{center}
 	 \includegraphics[width=1\linewidth]{figures/random-forest/validation_curve_forest_depth_series_f1}
 		\caption{ Validation curve on the tree-depth hyperparameter values for the Random Forest  learner.
-			The mean CV scores for the $1 - F1$ score is shown for a CV run experiment on \cref{target2}}
-		\label{fig:f1_random_forest_validation_curves_depth_trees}
+			The mean CV scores for the $1 - ROC AUC$ score is shown for a CV run experiment on \cref{target2}}
+		\label{fig:random_forest_validation_curves_depth_trees}
 
 	\end{center}
 \end{figure}
@@ -318,14 +318,14 @@ In this way, having a lower score in the graphic means a better model was reache
 	\begin{center}
 		\includegraphics[width=1\linewidth]{figures/random-forest/validation_curve_forest_num_trees_series_f1}
 			\caption{ Validation curve on the number of trees hyperparameter values, for the Random Forest  learner.
-				The mean CV scores for the $1 - F1$ score is shown for a CV run experiment on \cref{target2}}
-		\label{fig:f1_random_forest_validation_curves_num_trees}
+				The mean CV scores for the $1 - ROC AUC$ score is shown for a CV run experiment on \cref{target2}}
+		\label{fig:random_forest_validation_curves_num_trees}
 	\end{center}
 \end{figure}
 
 Recall how this relates to \cref{figure:dtree_overfit_problem_2}, in which a tree's training error always improves as a result of an increase in the tree's depth.
 Yet the tree's prediction error at one point suffers and deteriorates.
-From what we can see in \cref{fig:f1_random_forest_validation_curves_depth_trees}, the cross validated error is always decreasing for increasing tree depth.
+From what we can see in \cref{fig:random_forest_validation_curves_depth_trees}, the cross validated error is always decreasing for increasing tree depth.
 A very slight deceleration in the decrease of the cross validated error can be seen for tree depth bigger than 9.
 Yet the scores keeps improving and don't worsen.
 This is different to \cref{figure:dtree_overfit_problem_2} where if we let the tree grow deeper, at one point we only increase the performance of the training error.
@@ -596,7 +596,7 @@ It is notable that the second experiment is slightly better in the accuracy, pre
 Yet at the same time the second experiment's performance drastically drops for the recall and precision. 
 The same occurs accordingly for the $F1$ measure.
 We see the learner is losing performance in correctly tagging the user's who have migrated from the endemic region.
-This 15\% difference hints to how much of an impact is characterized by removing the features for the second experiment.
+This high relative difference hints to how much of an impact is characterized by removing the features for the second experiment.
 We can suspect that there's enough missing information in those features to reduce the predictive power of the learner.
 
 In both experiments, its important to note though that the elected hyperparameters are not optimal in any strict sense.
@@ -807,7 +807,7 @@ Then if samples are mislabeled, this will make the algorithm repetitively focus 
 
 In order to compare this learner to Random Forests, we ran the same setup as in \cref{subsection:random_forests_comparison_trees}
 with two experiments each varying a different hyperparameter.
-The Boosting models were built to classify on task \cref{target2} and the $F1$ score was used to evaluate their performance.
+The Boosting models were built to classify on task \cref{target2} and the $ROC AUC$ score was used to evaluate their performance.
 The cross validation procedure set 10 folds for each hyperparameter
  configuration and both experiments individually tuned on: a) the maximum tree depth and b) the number of base learners.
 
@@ -819,16 +819,16 @@ Additionally, we used the Gini index as the impurity measure in the splitting cr
 Cross validation procedures ran for 82150.8
  and 6076.3 seconds respectively and they both excluded attributes of the user's home state and their current endemic condition at $T_1$.
 
-The experiment's score outcomes across the different hyperparameter values were graphed in \cref{fig:f1_boosting_validation_curves_depth_trees,fig:f1_boosting_validation_curves_num_trees}.
-These compare the cross-validated and training set scores, where, for each hyperparameter value, the $1-F1$ score is graphed as a function of the hyperparameter's value.
+The experiment's score outcomes across the different hyperparameter values were graphed in \cref{fig:boosting_validation_curves_depth_trees,fig:boosting_validation_curves_num_trees}.
+These compare the cross-validated and training set scores, where, for each hyperparameter value, the $1-ROC AUC$ score is graphed as a function of the hyperparameter's value.
 In this way, having a lower score in the graphic means a better model was reached.
 
 \begin{figure}[h!]
 	\begin{center}
 		\includegraphics[width=1\linewidth]{figures/gradient-boosting/validation_curve_boosting_depth_series_f1}
 		\caption{ Validation curve for the tree-depth hyperparameter of the Gradient Boosting learner.
-		The mean CV scores for the $1 - F1$ score is shown for a CV run experiment on \cref{target2}}
-		\label{fig:f1_boosting_validation_curves_depth_trees}
+		The mean CV scores for the $1 - ROC AUC$ score is shown for a CV run experiment on \cref{target2}}
+		\label{fig:boosting_validation_curves_depth_trees}
 
 	\end{center}
 \end{figure}
@@ -836,13 +836,13 @@ In this way, having a lower score in the graphic means a better model was reache
 \begin{figure}[h!]
 	\begin{center}
 		\includegraphics[width=1\linewidth]{figures/gradient-boosting/validation_curve_boosting_num_trees_series_f1}
-			\caption{ Validation curve for the number of trees hyperparameter of the Gradient Boosting learner. The mean CV scores for the $1 - F1$ score is shown for a CV run experiment on \cref{target2}}
-			\label{fig:f1_boosting_validation_curves_num_trees}
+			\caption{ Validation curve for the number of trees hyperparameter of the Gradient Boosting learner. The mean CV scores for the $1 - ROC AUC$ score is shown for a CV run experiment on \cref{target2}}
+			\label{fig:boosting_validation_curves_num_trees}
 	\end{center}
 \end{figure}
 
 
-Recall how these outcomes compare to \cref{figure:dtree_overfit_problem_2} and \cref{fig:f1_random_forest_validation_curves_num_trees},
+Recall how these outcomes compare to \cref{figure:dtree_overfit_problem_2} and \cref{fig:random_forest_validation_curves_num_trees},
 in which a tree's training error always improves as a result of an increase in the tree's depth.
 
 Here, we see that the estimator is prone to overfitting when using a high $max depth$ value.
@@ -984,7 +984,7 @@ We set two experiments as before, where we run two procedures, one with all avai
 
 In this setup though, we had a minor difference, where, as before, it was characterized by the attributes used by our training dataset.
 In the third experiment, we \textbf{only} used the best features extracted from the second Random Forest experiment.
-With this third variant, we expected to see how good of a performance can the gradient boosting classifier achieve, using only the top 30 features, as selected by the random forest.
+With this third variant, we expected to see how good of a performance can the gradient boosting classifier achieve, using only the top 30 features, as selected by best-fit random forest learner for the previous experiments.
 % Even though
 Doing this has a hypothetical trade-off between accuracy and procedure run-time, where we can gain speed in our fitting process by compromising some of the predictive power of the algorithm.
 
