add comments to rotating figures

--- a/preamble.tex
+++ b/preamble.tex
@@ -115,8 +115,8 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 % Further modifications of float layout
 \usepackage[captionskip=5pt]{floatrow}  % We set caption skip here
 \floatsetup[table]{style=Plaintop,font=small,footnoterule=none,footskip=2.5pt}
-
-% Add ability to show figures rotated
+ 
+% Add ability to show rotated figures in horizontal or vertical alignment - sidewaysfigure
 \usepackage{rotating}
 
 %----------------+
